# coreason-model-foundry

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  THE_ARCHITECTURE_AND_UTILITY_OF_COREASON_MODEL_FOUNDRY.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  product_requirements.md
src/coreason_identity/: models.py  types.py
src/coreason_model_foundry/: __init__.py  alchemist.py  main.py  publisher.py  schemas.py  service.py
src/coreason_model_foundry/curator/: deduplicator.py  formatter.py  main.py  resolver.py
src/coreason_model_foundry/examiner/: contamination.py
src/coreason_model_foundry/strategies/: __init__.py  base.py  dora.py  factory.py  orpo.py  qlora.py
src/coreason_model_foundry/utils/: __init__.py  hardware.py  logger.py
src/utils/: __init__.py  logger.py
tests/: conftest.py  test_alchemist.py  test_curator.py  test_curator_edge_cases.py  test_examiner_contamination.py  test_hardware_safety.py  test_identity.py  test_main.py  test_main_orchestrator.py  test_main_orchestrator_coverage.py  test_publisher.py  test_schemas.py  test_strategies.py  test_strategies_base_coverage.py  test_strategies_dora.py  test_strategies_orpo.py  test_strategies_orpo_coverage.py  test_strategies_qlora.py  test_utils.py
tests/data/: duplicates.json  orpo_duplicates.json
