[tool.poetry]
name = "coreason_model_foundry"
version = "0.2.1"
description = "coreason-model-foundry"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [
    {include = "coreason_model_foundry", from = "src"},
    {include = "coreason_identity", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.3"
pydantic = "^2.12.5"
sentence-transformers = "^5.2.2"
datasets = "^4.5.0"
trl = "^0.27.1"
pyyaml = "^6.0.3"
anyio = "^4.12.1"
httpx = "^0.28.1"
aiofiles = "^25.1.0"
transformers = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.14"
pre-commit = "^4.5.1"
pytest-cov = "^7.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
types-pyyaml = "^6.0.12.20250915"
mypy = "^1.19.1"
pytest-mock = "^3.15.1"
types-aiofiles = "^25.1.0.20251011"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_model_foundry"
version = "0.2.1"
description = "coreason-model-foundry"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_model_foundry"
Repository = "https://github.com/CoReason-AI/coreason_model_foundry"
Documentation = "https://github.com/CoReason-AI/coreason_model_foundry"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = " "
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]
